--- a/pdfapilot-promus/src/main/webapp/scripts/app/server/history/history.html
+++ b/pdfapilot-promus/src/main/webapp/scripts/app/server/history/history.html
@@ -107,6 +107,7 @@
                         <td data-title="'Verified'">
                             <span class="glyphicon glyphicon-ok" aria-hidden="true" ng-show="entry.data.verified === 'true'" ng-cloak></span>
                             <span class="glyphicon glyphicon-remove" aria-hidden="true" ng-show="entry.data.verified !== 'true'" ng-cloak></span>
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true" ng-show="!entry.data.verified" ng-cloak></span>
                         </td>
                         <td data-title="'Data'">
                             <a style="cursor: pointer;" ng-click="metadata(entry)" title="Info">
